--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "codehub-microserve-search",
+  "name": "@microserves/codehub-search",
   "version": "2.0.0",
   "description": "",
   "main": "./src/index.ts",
@@ -18,8 +18,8 @@
     "watch": " cross-env NODE_ENV=development nodemon --watch src -e ts --exec ts-node -r tsconfig-paths/register ./src/index.ts",
     "lint": "eslint --ext .js,.ts ./src",
     "fix": "eslint --ext .js,.ts --fix ./src",
-    "image:build": "docker build --tag codehub-microserve-search .",
-    "image:run": "docker run --rm -ti -p 3006:3006 codehub-microserve-search",
+    "image:build": "docker build --tag @microserves/codehub-search .",
+    "image:run": "docker run --rm -ti -p 3006:3006 @microserves/codehub-search",
     "test": "cross-env NODE_ENV=test mocha -r ts-node/register ./src/test/**/*.spec.ts && exit 0",
     "coverage": "cross-env NODE_ENV=test nyc --reporter=html --reporter=text mocha --exit -r ts-node/register ./src/test/**/*.spec.ts",
     "coverage:coveralls": "cross-env NODE_ENV=test nyc --reporter=lcov --reporter=text-lcov mocha --exit -r ts-node/register ./src/test/**/*.spec.ts | coveralls"
